# rust-actix-ssr

./: Cargo.toml  README.md
migrations/2023-02-24-003817_create_rust_logos/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/api/: logos.rs  mod.rs
src/pages/: add.rs  hello.rs  index.rs  mod.rs
src/util/: db_util.rs
static/: add_logo.html  index.html  view.html
